--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Comprá productos para tu mascota. Encontrá variedades de marcas y productos a bajo costo."
+    />
+    <meta
+      name="keywords"
+      content="Alimento balanceado. Primeras marcas. Envíos sin cargo."
+    />
     <title>Petshop-boys</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="/assets/img/juguete-del-perro.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="hero">
@@ -32,7 +45,7 @@
       </header>
 
       <main>
-        <section>
+        <section class="section-1">
           <div>
             <img
               src="./assets/img/inicio.jpg"
@@ -42,7 +55,7 @@
           </div>
         </section>
 
-        <section>
+        <section class="section-2">
           <div>
             <img
               src="./assets/img/inicio1.jpg"
