--- a/pages/iniciarsesion.html
+++ b/pages/iniciarsesion.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar sesion Petshop-boys</title>
-    <link rel="stylesheet" href="../css/style.css"
+    <meta
+      name="description"
+      content="Registrate e inicia sesión para acceder a beneficios exclusivos"
+    />
+    <meta name="keywords" content="Inicia sesión. Descuentos increíbles." />
+    <title>Iniciar sesion | Petshop-boys</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="../assets/img/juguete-del-perro.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
