--- a/pages/gatos.html
+++ b/pages/gatos.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gatos Petshop-boys</title>
+    <meta name="description" content="Contenido para tu amigo felino" />
+    <meta name="keywords" content="Piedritas. Mochilas. Croquetas." />
+    <title>Gatos | Petshop-boys</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="../assets/img/juguete-del-perro.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
