--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nosotros Petshop-boys</title>
-    <link rel="stylesheet" href="../css/style.css"
+    <meta name="description" content="Quienes somos; una pequeña reseña." />
+    <meta name="keywords" content="Familia. Asociación. Trayectoria." />
+    <title>Nosotros | Petshop-boys</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="../assets/img/juguete-del-perro.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
