--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       name="keywords"
       content="Alimento balanceado. Primeras marcas. Envíos sin cargo."
     />
+    <meta property="og:title" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:image" content="" />
     <title>Petshop-boys</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link
