--- a/pages/iniciarsesion.html
+++ b/pages/iniciarsesion.html
@@ -9,6 +9,12 @@
       content="Registrate e inicia sesión para acceder a beneficios exclusivos"
     />
     <meta name="keywords" content="Inicia sesión. Descuentos increíbles." />
+    <meta property="og:title" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:image" content="" />
     <title>Iniciar sesion | Petshop-boys</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link
