--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Quienes somos; una pequeña reseña." />
     <meta name="keywords" content="Familia. Asociación. Trayectoria." />
+    <meta property="og:title" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:image" content="" />
     <title>Nosotros | Petshop-boys</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link
