--- a/pages/perros.html
+++ b/pages/perros.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contenido para tu amigo canino" />
     <meta name="keywords" content="Correa. Alimento. Comedero." />
+    <meta property="og:title" content="" />
+    <meta property="og:site_name" content="" />
+    <meta property="og:url" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="" />
+    <meta property="og:image" content="" />
     <title>Perros | Petshop-boys</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link
